# spangap-web

./: .gitignore  CONTRIBUTING.md  INTERNALS.old.md  LICENSE.md  README.md  straddle.yaml
.githooks/: prepare-commit-msg
.github/workflows/: dco.yml
browser/: CLAUDE.old.md  INTERNALS.md  README-old.old.md  README.md  package.json  tsconfig.json
browser/src/: index.ts
browser/src/components/: ConnectionOverlay.vue  Dock.vue  EditorWindow.vue  FloatingWindow.vue  GeneratedListRow.vue  GeneratedPanel.vue  IconTrash.vue  LogWindow.vue  MenuBar.vue  PanelHeading.vue  SettingSelect.vue  SettingSlider.vue  SettingText.vue  SettingToggle.vue  SettingsNavTree.vue  SettingsPanel.vue  SettingsWindow.vue  StraddleWindows.vue  TerminalWindow.vue  TopbarIcons.vue  UsableArea.vue
browser/src/lib/: apps.ts  auth.ts  device-url.ts  generatedPanels.ts  reconnect.ts  topbarIcons.ts  viewport.ts  webrtc-session.ts  windowMounts.ts  windows.ts
browser/src/modules/: advanced.ts  editor.ts  network.ts  system.ts
browser/src/pages/: LoginPage.vue  SetupPage.vue
browser/src/panels/: AboutPanel.vue  DeveloperPanel.vue  NetworkPanel.vue  SystemPanel.vue  WifiScanDialog.vue
browser/src/stores/: device.ts  index.ts  log.ts  menu.ts
docs/: browser-shell-internals.md  browser-shell.md  web-internals.md  web.md  webrtc-internals.md  webrtc.md
docs/plans/: captive-portal.md
esp-idf/: CMakeLists.txt  idf_component.yml
esp-idf/include/: web.h  webrtc_sctp.h  webrtc_task.h
esp-idf/src/: auth_web.cpp  web.cpp  webrtc_sctp.cpp  webrtc_task.cpp
